resources/inventory-src/Ingress_inventory-src_inventory.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"haproxy"},"creationTimestamp":"2021-07-29T15:59:28Z","generation":1,"labels":{"app.kubernetes.io/instance":"inventory-dest"},"managedFields":[{"apiVersion":"networking.k8s.io/v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:kubectl.kubernetes.io/last-applied-configuration":{},"f:kubernetes.io/ingress.class":{}}},"f:spec":{"f:rules":{}}},"manager":"ku [...]
    kubernetes.io/ingress.class: haproxy
  generation: 1
  labels:
    app.kubernetes.io/instance: inventory-dest
  name: inventory
  namespace: inventory-marco
  selfLink: /apis/extensions/v1beta1/namespaces/inventory-src/ingresses/inventory
spec:
  rules:
  - host: inventory.inventory-marco.10.19.2.21.nip.io
    http:
      paths:
      - backend:
          serviceName: inventory
          servicePort: 8080
        path: /
        pathType: Prefix
