resources/inventory-src/Pod_inventory-src_rsync-qlprf.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu, memory request for container
      rsync; cpu, memory limit for container rsync'
  generateName: rsync-
  labels:
    app: crane2
  name: rsync-qlprf
  namespace: inventory-prod
  selfLink: /api/v1/namespaces/inventory-src/pods/rsync-qlprf
spec:
  containers:
  - command:
    - /bin/bash
    - -c
    - trap "touch /usr/share/rsync/rsync-client-container-done" EXIT SIGINT SIGTERM;
      timeout=120; SECONDS=0; while [ $SECONDS -lt $timeout ]; do /usr/bin/rsync --recursive
      --links --perms --devices --specials --times --owner --group --human-readable
      --log-file=/dev/stdout --info=COPY2,DEL2,REMOVE2,SKIP2,FLIST2,PROGRESS2,STATS2
      /mnt/inventory-src/e014b7030e0617f795446986efdab054/ rsync://root@data-inventory-postgresql-0.inventory-prod.svc.cluster.local/e014b7030e0617f795446986efdab054
      --port 2222; rc=$?; done; exit $rc;
    env:
    - name: RSYNC_PASSWORD
    image: quay.io/konveyor/rsync-transfer:latest
    imagePullPolicy: Always
    name: rsync
    resources:
      limits:
        cpu: 1500m
        memory: 2Gi
      requests:
        cpu: 1500m
        memory: 2Gi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /mnt/inventory-src/e014b7030e0617f795446986efdab054
      name: mnt
    - mountPath: /usr/share/rsync
      name: rsync-communication
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-jrnsc
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: mnt
    persistentVolumeClaim:
      claimName: data-inventory-postgresql-0
  - emptyDir: {}
    name: rsync-communication
  - name: kube-api-access-jrnsc
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
