resources/inventory-src/Service_inventory-src_inventory-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"inventory","meta.helm.sh/release-namespace":"inventory-src"},"creationTimestamp":"2021-08-15T20:26:28Z","labels":{"app.kubernetes.io/instance":"inventory-dest","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"postgresql","helm.sh/chart":"postgresql-10.9.2"},"managedFields":[{"apiVersion":"v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:meta.helm.sh/rel [...]
    meta.helm.sh/release-name: inventory
    meta.helm.sh/release-namespace: inventory-src
  labels:
    app.kubernetes.io/instance: inventory-dest
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.9.2
  name: inventory-postgresql
  namespace: inventory-marco
  selfLink: /api/v1/namespaces/inventory-src/services/inventory-postgresql
spec:
  ports:
  - name: tcp-postgresql
    port: 5432
    protocol: TCP
    targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/name: postgresql
    role: primary
  sessionAffinity: None
  type: ClusterIP
