resources/inventory-src/Service_inventory-src_inventory.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"description":"The web server's http port","meta.helm.sh/release-name":"inventory","meta.helm.sh/release-namespace":"inventory-src"},"creationTimestamp":"2021-08-15T20:26:28Z","labels":{"app":"inventory","app.kubernetes.io/instance":"inventory-dest","app.kubernetes.io/managed-by":"Helm"},"managedFields":[{"apiVersion":"v1","fieldsType":"FieldsV1","fieldsV1":{"f:metadata":{"f:annotations":{".":{},"f:description":{},"f:meta.helm. [...]
    meta.helm.sh/release-name: inventory
    meta.helm.sh/release-namespace: inventory-src
  labels:
    app: inventory
    app.kubernetes.io/instance: inventory-dest
  name: inventory
  namespace: inventory-prod
  selfLink: /api/v1/namespaces/inventory-src/services/inventory
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: inventory
  sessionAffinity: None
  type: ClusterIP
